[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Players/Player.gd" type="Script" id=1]
[ext_resource path="res://Scenes/weapons/Projectile.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0
height = 39.4797

[node name="Player" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
Projectile = ExtResource( 2 )
SPEED = 400

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

position = Vector2( 2, 0 )
scale = Vector2( 0.15, 0.15 )
animation = ""
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( -2.70156, 1.34573 )
scale = Vector2( 1.75343, 2.10318 )
shape = SubResource( 1 )
_sections_unfolded = [ "Visibility" ]

[node name="FireRangeTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.75
one_shot = false
autostart = false

[node name="FireSpeedTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.25
one_shot = false
autostart = false

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]

[connection signal="timeout" from="FireRangeTimer" to="." method="addBullet"]

[connection signal="timeout" from="FireSpeedTimer" to="." method="_on_FireSpeedTimer_timeout"]


